Fix: fixed favorite icon overlapping navbar.

--- a/client/src/styles/components/favoriteIcon.css
+++ b/client/src/styles/components/favoriteIcon.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: .5rem;
     right: .5rem;
-    z-index: 10;
+    z-index: 5;
     pointer-events: auto;
 }
 
